--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install SSH keys
         run: |
-          install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          install -m 600 -D /dev/null ~/.ssh/new
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/new
           ssh-keyscan -H "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts
       - name: ssh connect and clone
         run: |
           ssh "${{ secrets.SSH_USER }}"@"${{ secrets.SSH_HOST }}" << EOF
           echo ----- take clone in remote server -----
-          mkdir rajan
+          mkdir hello
           exit
           EOF
       - name: cleanup
