--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           ssh "${{ secrets.SSH_USER }}"@"${{ secrets.SSH_HOST }}" << EOF
           echo ----- take clone in remote server -----
-          mkdir hello
+          git clone git@github.com:rajan-addweb/new-demo.git
           exit
           EOF
       - name: cleanup
